--- a/study_code/c_layout_01/html/b_10_coupang_join.html
+++ b/study_code/c_layout_01/html/b_10_coupang_join.html
@@ -102,8 +102,8 @@
         </div>
 
         <div class="agree_check_area">
-          <input type="check">
-          <label for=""></label>
+          <input type="checkbox" id="agree_age">
+          <label for="agree_age">[필수] 만 14세 이상입니다</label>
         </div>
       </fieldset>
     </form>
