--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -35,6 +35,7 @@
         <li><a target="_blank" href="b_07_jobis_signup_result.html">회원가입 페이지 코딩 풀이</a></li>        
         <li><a target="_blank" href="b_08_naver_join_result.html">네이버 회원가입 페이지 코딩 풀이</a></li>
         <li><a target="_blank" href="b_09_coupang_login_result.html">쿠팡 로그인 페이지 코딩 풀이</a></li>
+        <li><a target="_blank" href="b_10_coupang_join_result.html">쿠팡 회원가입 페이지 코딩 풀이</a></li>
       </ul>
     </div>
 
