--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -36,6 +36,7 @@
         <li><a target="_blank" href="b_08_naver_join_result.html">네이버 회원가입 페이지 코딩 풀이</a></li>
         <li><a target="_blank" href="b_09_coupang_login_result.html">쿠팡 로그인 페이지 코딩 풀이</a></li>
         <li><a target="_blank" href="b_10_coupang_join_result.html">쿠팡 회원가입 페이지 코딩 풀이</a></li>
+        <li><a target="_blank" href="b_10_coupang_join_sample.html">쿠팡 회원가입 페이지 코딩 전 샘플</a></li>
       </ul>
     </div>
 
