main img태그 background-image로 수정

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -14,6 +14,7 @@
   <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
+  <link rel="stylesheet" href="../css/src/component.css">
   <link rel="stylesheet" href="../css/src/main_v1.css">
 
   <!-- js -->
@@ -30,7 +31,7 @@
       <h1>
         <a href="#">
           <span class="blind">큐브미</span>
-          <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미" aria-hidden="true">
+          <!-- <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미" aria-hidden="true"> -->
         </a>
       </h1>
       <nav id="navigation">
@@ -68,11 +69,11 @@
                 <input type="text" id="search_bar" value="" />
               </div>
               <div class="unb_search_icon">
-                <button type="button"><img src="../img/search.png" alt="검색"></button>
+                <button type="button"></button>
               </div>
             </div>
             <div class="unb_cart">
-              <a href="#"><img src="../img/cart.png" alt="장바구니 바로가기"></a>
+              <a href="#"></a>
             </div>
           </div>
         </nav>
@@ -156,8 +157,8 @@
       </div>
       <ul class="benefit_detail_area">
         <li class="benefit">
-          <div class="benefit_img">
-            <img src="../img/wallet.png" alt="지갑 이미지" aria-hidden="true">
+          <div class="benefit_img benefit_img_coupon">
+            <!-- <img src="../img/wallet.png" alt="지갑 이미지" aria-hidden="true"> -->
           </div>
           <p class="benefit_text">
             회원가입시 
@@ -169,8 +170,8 @@
         </li>
 
         <li class="benefit">
-          <div class="benefit_img">
-            <img src="../img/coin.png" alt="동전 이미지" aria-hidden="true">
+          <div class="benefit_img benefit_img_review">
+            <!-- <img src="../img/coin.png" alt="동전 이미지" aria-hidden="true"> -->
           </div>
           <p class="benefit_text">
             포토리뷰 작성시 
@@ -180,8 +181,8 @@
         </li>
 
         <li class="benefit">
-          <div class="benefit_img">
-            <img src="../img/hands.png" alt="악수 이미지" aria-hidden="true">
+          <div class="benefit_img benefit_img_friend">
+            <!-- <img src="../img/hands.png" alt="악수 이미지" aria-hidden="true"> -->
           </div>
           <p class="benefit_text">
             친구 추천시 나와 친구 
