--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -14,7 +14,7 @@
   <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/component.css">
+  <link rel="stylesheet" href="../css/common/component.css">
   <link rel="stylesheet" href="../css/src/main_v1.css">
 
   <!-- js -->
