--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -14,6 +14,7 @@
   <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
+  <link rel="stylesheet" href="../css/common/component.css">
   <link rel="stylesheet" href="../css/src/event_v1.css">
 
   <!-- js -->
@@ -30,7 +31,7 @@
       <h1>
         <a href="#">
           <span class="blind">큐브미</span>
-          <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미" aria-hidden="true">
+          <!-- <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미" aria-hidden="true"> -->
         </a>
       </h1>
       <nav id="navigation">
@@ -68,17 +69,17 @@
                 <input type="text" id="search_bar" value="" />
               </div>
               <div class="unb_search_icon">
-                <button type="button"><img src="../img/search.png" alt="검색"></button>
+                <button type="button"></button>
               </div>
             </div>
             <div class="unb_cart">
-              <a href="#"><img src="../img/cart.png" alt="장바구니 바로가기"></a>
+              <a href="#"></a>
             </div>
           </div>
         </nav>
       </nav>
-    </header>
-    <!-- // #headBox -->
+    </header> <!-- // #headBox-->
+
 
 
     <!-- #eventBox -->
@@ -91,37 +92,37 @@
           <li class="event_ing action"><button type="button">진행중인 이벤트</button></li>
           <li class="event_end"><button type="button">종료된 이벤트</button></li>
         </ul>
-        <div class="tab_content">
+        <div class="tab_content clearfix">
           <ul class="event_ing_wrap">
             <li class="event event_con_01">
               <div class="event_img"></div>
-              <div class="event_title"></div>
-              <div class="event_date"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
             </li>
             <li class="event event_con_02">
               <div class="event_img"></div>
-              <div class="event_title"></div>
-              <div class="event_date"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
             </li>
             <li class="event event_con_03">
               <div class="event_img"></div>
-              <div class="event_title"></div>
-              <div class="event_date"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
             </li>
             <li class="event event_con_04">
               <div class="event_img"></div>
-              <div class="event_title"></div>
-              <div class="event_date"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
             </li>
             <li class="event event_con_05">
               <div class="event_img"></div>
-              <div class="event_title"></div>
-              <div class="event_date"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
             </li>
             <li class="event event_con_06">
               <div class="event_img"></div>
-              <div class="event_title"></div>
-              <div class="event_date"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
             </li>
           </ul>
           <ul class="event_end_wrap" hidden>
