--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -126,12 +126,36 @@
             </li>
           </ul>
           <ul class="event_end_wrap" hidden>
-            <li class="event event_con_01"></li>
-            <li class="event event_con_02"></li>
-            <li class="event event_con_03"></li>
-            <li class="event event_con_04"></li>
-            <li class="event event_con_05"></li>
-            <li class="event event_con_06"></li>
+            <li class="event event_con_01">
+              <div class="event_img"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+            </li>
+            <li class="event event_con_02">
+              <div class="event_img"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+            </li>
+            <li class="event event_con_03">
+              <div class="event_img"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+            </li>
+            <li class="event event_con_04">
+              <div class="event_img"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+            </li>
+            <li class="event event_con_05">
+              <div class="event_img"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+            </li>
+            <li class="event event_con_06">
+              <div class="event_img"></div>
+              <div class="event_title">Lorem, ipsum dolor.</div>
+              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+            </li>
           </ul>
         </div>
         <button class="event_more" type="button">더보기</button>
