text-indent수정, facebook, instagram img태그 삭제 후 background-image

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -217,7 +217,7 @@
         <div class="title_text">
           <h2 class="title">진행중인 이벤트</h2>
         </div>
-        <div class="title_all">모두보기(<span class="event_length">4</span>)</div>
+        <div class="title_all"><a href="./event_v1.html">모두보기(<span class="event_length">4</span>)</a></div>
       </div>
       <ul class="event_area">
         <li class="event">
@@ -399,10 +399,10 @@
 
         <ul class="foot_bottom_btn">
           <li class="foot_facebook">
-            <a href="#"><img src="../img/facebook.png" alt="페이스북 바로가기"></a>
+            <a href="#"></a>
           </li>
           <li class="foot_instagram">
-            <a href="#"><img src="../img/instagram.png" alt="인스타그램 바로가기"></a>
+            <a href="#"></a>
           </li>
         </ul>
       </div>
