--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -29,7 +29,7 @@
     <!-- #headBox -->
     <header id="headBox">
       <h1>
-        <a href="#">
+        <a href="./main_v1.html">
           <span class="blind">큐브미</span>
           <!-- <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미" aria-hidden="true"> -->
         </a>
@@ -197,10 +197,10 @@
 
         <ul class="foot_bottom_btn">
           <li class="foot_facebook">
-            <a href="#"><img src="../img/facebook.png" alt="페이스북 바로가기"></a>
+            <a href="#"></a>
           </li>
           <li class="foot_instagram">
-            <a href="#"><img src="../img/instagram.png" alt="인스타그램 바로가기"></a>
+            <a href="#"></a>
           </li>
         </ul>
       </div>
