--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -47,6 +47,8 @@
         <li><a target="_blank" href="./c_02_transform2.html">transform의 이해2</a></li>
         <li><a target="_blank" href="./c_03_overflow.html">overflow의 이해</a></li>
         <li><a target="_blank" href="./c_04_border_radius.html">border-radius의 이해</a></li>
+        <li><a target="_blank" href="./c_04_transition.html">transition의 이해</a></li>
+        <li><a target="_blank" href="./c_06_animation.html">animation의 이해</a></li>
       </ul>
     </div>
 
