--- a/study_code/b_step_02/html/c_06_animation.html
+++ b/study_code/b_step_02/html/c_06_animation.html
@@ -43,10 +43,27 @@
         <li><span>07</span></li>
       </ul>
     </div>
+
+    <div class="sample_test">
+      <div class="car">
+        <div class="window">
+          <div class="window_img"></div>
+        </div>
+        <div class="side_mirror"></div>
+        <div class="wheel wheel_1"></div>
+        <div class="wheel wheel_2"></div>
+      </div>
+      <div class="scroll"></div>
+    </div>
   </div><!-- // #wrap -->
 
   <!-- script -->
   <script>
+    // var samT = document.querySelector('.sample_test');
+    // // 일정시간 (0.5초)뒤에 기능을 수행
+    // setTimeout(function(){
+    //   samT.classList.add('action');
+    // }, 500);
   </script>
 </body>
 </html>
