반응형 기본

--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -49,6 +49,7 @@
         <li><a target="_blank" href="./c_04_border_radius.html">border-radius의 이해</a></li>
         <li><a target="_blank" href="./c_04_transition.html">transition의 이해</a></li>
         <li><a target="_blank" href="./c_06_animation.html">animation의 이해</a></li>
+        <li><a target="_blank" href="./c_07_media_query.html">반응형 테스트</a></li>
       </ul>
     </div>
 
