--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -50,11 +50,11 @@
         <nav id="unb">
           <h3 class="blind">사용자 네비게이션</h3>
           <ul class="unb_btn">
-            <li class="unb_language">
-              언어선택
-              <button type="button">한국어</button>
-              <button type="button">ENGLISH</button>
-              <button type="button">中國語</button>
+            <li class="unb_language" tabindex="0">
+              <div class="language_img"></div>
+              <span><a href="#">한국어</a></span>
+              <span><a href="#">ENGLISH</a></span>
+              <span><a href="#">中國語</a></span>
             </li>
             <li class="unb_sign"><a href="#">회원가입</a></li>
             <li class="unb_login"><a href="#">로그인</a></li>
@@ -89,72 +89,96 @@
       </div>
       <div class="event_area">
         <ul class="event_tab">
-          <li class="event_ing action"><button type="button">진행중인 이벤트</button></li>
-          <li class="event_end"><button type="button">종료된 이벤트</button></li>
+          <li class="event_ing action"><button type="button"><h3>진행중인 이벤트</h3></button></li>
+          <li class="event_end"><button type="button"><h3>종료된 이벤트</h3></button></li>
         </ul>
         <div class="tab_content clearfix">
           <ul class="event_ing_wrap">
             <li class="event event_con_01">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_02">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_03">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_04">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_05">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_06">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
           </ul>
           <ul class="event_end_wrap" hidden>
             <li class="event event_con_01">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_02">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_03">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_04">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_05">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
             <li class="event event_con_06">
-              <div class="event_img"></div>
-              <div class="event_title">Lorem, ipsum dolor.</div>
-              <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              <a href="#">
+                <div class="event_img"></div>
+                <div class="event_title">Lorem, ipsum dolor.</div>
+                <div class="event_date">0000.00.00 ~ 0000.00.00</div>
+              </a>
             </li>
           </ul>
         </div>
