--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -50,11 +50,11 @@
         <nav id="unb">
           <h3 class="blind">사용자 네비게이션</h3>
           <ul class="unb_btn">
-            <li class="unb_language">
-              언어선택
-              <button type="button">한국어</button>
-              <button type="button">ENGLISH</button>
-              <button type="button">中國語</button>
+            <li class="unb_language" tabindex="0">
+              <div class="language_img"></div>
+              <span><a href="#">한국어</a></span>
+              <span><a href="#">ENGLISH</a></span>
+              <span><a href="#">中國語</a></span>
             </li>
             <li class="unb_sign"><a href="#">회원가입</a></li>
             <li class="unb_login"><a href="#">로그인</a></li>
@@ -254,15 +254,15 @@
       <div class="awards_title">We're making headlines</div>
       <div class="awards_area">
         <div class="awards_btn">
-          <div class="awards_before_btn"></div>
-          <div class="awards_after_btn"></div>
+          <div class="awards_before_btn"><button type="button">이전보기</button></div>
+          <div class="awards_after_btn"><button type="button">다음보기</button></div>
         </div>
         <ul class="awards_indicator">
-          <li class="awards_circle"></li>
-          <li class="awards_circle"></li>
-          <li class="awards_circle"></li>
-          <li class="awards_circle"></li>
-          <li class="awards_circle"></li>
+          <li class="awards_circle"><button type="button"></button></li>
+          <li class="awards_circle"><button type="button"></button></li>
+          <li class="awards_circle"><button type="button"></button></li>
+          <li class="awards_circle"><button type="button"></button></li>
+          <li class="awards_circle"><button type="button"></button></li>
         </ul>
         <ul class="awards_main">
           <li class="awards_before">
