--- a/study_code/a_project/html/event_v1.html
+++ b/study_code/a_project/html/event_v1.html
@@ -89,13 +89,14 @@
       </div>
       <div class="event_area">
         <ul class="event_tab">
-          <li class="event_ing action"><button type="button"><h3>진행중인 이벤트</h3></button></li>
-          <li class="event_end"><button type="button"><h3>종료된 이벤트</h3></button></li>
+          <li class="event_ing action"><h3><button type="button">진행중인 이벤트</button></h3></li>
+          <li class="event_end"><h3><button type="button">종료된 이벤트</button></h3></li>
         </ul>
         <div class="tab_content clearfix">
           <ul class="event_ing_wrap">
             <li class="event event_con_01">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -103,6 +104,7 @@
             </li>
             <li class="event event_con_02">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -110,6 +112,7 @@
             </li>
             <li class="event event_con_03">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -117,6 +120,7 @@
             </li>
             <li class="event event_con_04">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -124,6 +128,7 @@
             </li>
             <li class="event event_con_05">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -131,6 +136,7 @@
             </li>
             <li class="event event_con_06">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -140,6 +146,7 @@
           <ul class="event_end_wrap" hidden>
             <li class="event event_con_01">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -147,6 +154,7 @@
             </li>
             <li class="event event_con_02">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -154,6 +162,7 @@
             </li>
             <li class="event event_con_03">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -161,6 +170,7 @@
             </li>
             <li class="event event_con_04">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -168,6 +178,7 @@
             </li>
             <li class="event event_con_05">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
@@ -175,6 +186,7 @@
             </li>
             <li class="event event_con_06">
               <a href="#">
+                <div class="event_hover">이벤트 확인하기</div>
                 <div class="event_img"></div>
                 <div class="event_title">Lorem, ipsum dolor.</div>
                 <div class="event_date">0000.00.00 ~ 0000.00.00</div>
