--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -50,6 +50,7 @@
         <li><a target="_blank" href="./c_04_transition.html">transition의 이해</a></li>
         <li><a target="_blank" href="./c_06_animation.html">animation의 이해</a></li>
         <li><a target="_blank" href="./c_07_media_query.html">반응형 테스트</a></li>
+        <li><a target="_blank" href="./c_08_menu_stlye.html">반응형 테스트</a></li>
       </ul>
     </div>
 
