반응형 테스트

--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -51,7 +51,8 @@
         <li><a target="_blank" href="./c_04_transition.html">transition의 이해</a></li>
         <li><a target="_blank" href="./c_06_animation.html">animation의 이해</a></li>
         <li><a target="_blank" href="./c_07_media_query.html">반응형 테스트</a></li>
-        <li><a target="_blank" href="./c_08_menu_stlye.html">반응형 테스트</a></li>
+        <li><a target="_blank" href="./c_08_menu_stlye.html">메뉴</a></li>
+        <li><a target="_blank" href="./c_09_media_query2.html">반응형 테스트2</a></li>
       </ul>
     </div>
 
