--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -39,6 +39,7 @@
         <li><a target="_blank" href="./b_03_form.html">form요소</a></li>
         <li><a target="_blank" href="./b_04_form_step_01.html">form 기초 type개념 정리</a></li>
         <li><a target="_blank" href="./b_05_form_question.html">form 추가</a></li>
+        <li><a target="_blank" href="./b_06_make_icon_test.html">만든 아이콘 폰트로 확인</a></li>
       </ul>
     </div>
     <div class="part">
