--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -53,7 +53,8 @@
         <li><a target="_blank" href="./c_06_animation.html">animation의 이해</a></li>
         <li><a target="_blank" href="./c_07_media_query.html">반응형 테스트</a></li>
         <li><a target="_blank" href="./c_08_menu_stlye.html">메뉴</a></li>
-        <li><a target="_blank" href="./c_09_media_query2.html">반응형 테스트2</a></li>
+        <li><a target="_blank" href="./c_09_media_query2.html">반응형 이해를 위한 틀</a></li>
+        <li><a target="_blank" href="./c_10_responsive.html">반응형 웹 구조를 위한 기초 틀</a></li>
       </ul>
     </div>
 
