--- a/study_code/b_step_02/html/c_11_responsive_02.html
+++ b/study_code/b_step_02/html/c_11_responsive_02.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- c_12_responsive_test2.html -->
+<!-- c_11_responsive_02.html -->
 <html lang="ko-KR" class="no-js">
 <head>
   <meta charset="UTF-8">
@@ -18,7 +18,7 @@
   <!-- css -->
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/c_12_responsive_test2.css">
+  <link rel="stylesheet" href="../css/src/c_11_responsive_02.css">
 
   <!-- script -->
   <script src="../js/common/modernizr-custom.js"></script>
@@ -29,36 +29,7 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <header id="headBox">
-      <div class="head_area">
-        <h1><a href="./a_content.html">웹</a></h1>
-        <div class="menu_area">
-          <div class="menu menu_1"></div>
-          <div class="menu menu_2"></div>
-        </div>
-      </div>
-    </header>
-
-    <section id="viewBox">
-      <div class="view_area"></div>
-    </section>
-
-    <article id="contentBox">
-      <div class="title_shape"></div>
-    </article>
-
-    <article id="infoBox">
-      <div class="new_area"></div>
-      <div class="notice_area"></div>
-      <div class="more_content"></div>
-    </article>
-
-    <footer id="footBox">
-      <div class="foot_area">
-        <h2></h2>
-      </div>
-    </footer>
-
+    <h1><a href="./a_content.html">웹</a></h1>
   </div><!-- // #wrap -->
 
   <!-- script -->
