--- a/study_code/b_step_02/html/c_11_responsive_02.html
+++ b/study_code/b_step_02/html/c_11_responsive_02.html
@@ -26,14 +26,47 @@
   <title>responsive</title>
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="favicon.png">
-<body>
-  <!-- layout -->
-  <div id="wrap">
-    <h1><a href="./a_content.html">웹</a></h1>
-  </div><!-- // #wrap -->
-
-  <!-- script -->
-  <script>
-  </script>
-</body>
+  <body>
+    <!-- layout -->
+    <div id="wrap">
+      <header id="headBox">
+        <h1><a href="./a_content.html" class="full">웹</a></h1>
+        <nav id="gnbBox">
+          <h2 class="blind">navigation</h2>
+          <div class="nav_btn">
+            <button type="button">메뉴</button>
+          </div>
+          <ul class="global_navigation">
+            <li>
+              <a href="#" class="full">navi_01</a>
+            </li>
+            <li>
+              <a href="#" class="full">navi_02</a>
+            </li>
+            <li>
+              <a href="#" class="full">navi_03</a>
+            </li>
+            <li>
+              <a href="#" class="full">navi_04</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <section id="viewBox">
+        <h2 class="blind">광고영역</h2>
+      </section>
+      <article id="conBox">
+        <h2 class="blind">본문내용</h2>
+        <ul class="clearfix">
+          <li>01</li>
+          <li>02</li>
+          <li>03</li>
+          <li>04</li>
+        </ul>
+      </article>
+      <article id="otherBox"></article>
+      <footer id="footBox"></footer>
+    </div>
+    <!-- javascript -->
+  </body>
 </html>
