--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -58,6 +58,7 @@
         <li><a target="_blank" href="./c_11_responsive_test.html">반응형 웹 구조 실습</a></li>
         <li><a target="_blank" href="./c_11_responsive_02.html">반응형 웹 구조 결과</a></li>
         <li><a target="_blank" href="./c_12_responsive_test2.html">반응형 웹 구조 실습2</a></li>
+        <li><a target="_blank" href="./c_12_responsive_03.html">반응형 웹 구조 실습2</a></li>
       </ul>
     </div>
 
