--- a/study_code/b_step_02/html/c_12_responsive_03.html
+++ b/study_code/b_step_02/html/c_12_responsive_03.html
@@ -24,18 +24,32 @@
   <!-- layout -->
   <div id="wrap">
     <header id="headBox">
-      <div class="container"></div>
+      <div class="container">
+        <h1><a href="./a_content.html">웹</a></h1>
+        <div class="menu_area">
+          <div class="menu menu_1"></div>
+          <div class="menu menu_2"></div>
+        </div>
+      </div>
     </header>
 
     <section id="viewBox"> 
-      <div class="container"></div>
+      <div class="container">
+        <div class="new_area"></div>
+        <div class="notice_area"></div>
+        <div class="more_content"></div>
+      </div>
     </section>
 
-    <article id="contentBox"></article>
+    <article id="contentBox">
+      <div class="title_shape"></div>
+    </article>
     <article id="infoBox"></article>
 
     <footer id="footBox">
-      <div class="container"></div>
+      <div class="container">
+        <h2></h2>
+      </div>
     </footer>
   </div>
   <!-- javascript -->
