--- a/study_code/b_step_02/html/a_content.html
+++ b/study_code/b_step_02/html/a_content.html
@@ -59,6 +59,7 @@
         <li><a target="_blank" href="./c_11_responsive_02.html">반응형 웹 구조 결과</a></li>
         <li><a target="_blank" href="./c_12_responsive_test2.html">반응형 웹 구조 실습2</a></li>
         <li><a target="_blank" href="./c_12_responsive_03.html">반응형 웹 구조 실습2 풀이</a></li>
+        <li><a target="_blank" href="./c_13_flex_test.html">display:flex 구조 이해하기</a></li>
         
       </ul>
     </div>
