--- a/study_code/b_step_03/html/b_01_js_variable.html
+++ b/study_code/b_step_03/html/b_01_js_variable.html
@@ -19,5 +19,6 @@
     document.write('본문 마지막에 작성하여 나타나는 글자!!!');
   </script>
   <script src="../js/src/b_01_write.js"></script>
+  <script src="../js/src/b_01_js_variable.js"></script>
 </body>
 </html>
