--- a/study_code/b_step_03/html/b_02_js_data_type.html
+++ b/study_code/b_step_03/html/b_02_js_data_type.html
@@ -42,5 +42,6 @@
   </div>
 
   <script src="../js/src/b_02_data_type.js"></script>
+  <script src="../js/src/b_02_data_type_summary.js"></script>
 </body>
 </html>
