새로운 js연결

--- a/study_code/b_step_03/html/b_02_js_data_type.html
+++ b/study_code/b_step_03/html/b_02_js_data_type.html
@@ -43,5 +43,6 @@
 
   <script src="../js/src/b_02_data_type.js"></script>
   <script src="../js/src/b_02_data_type_summary.js"></script>
+  <script src="../js/src/b_02_js_data_type_summary2.js"></script>
 </body>
 </html>
