--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -16,6 +16,7 @@
         <li><a href="./b_01_js_variable.html">변수생성</a></li>
         <li><a href="./b_02_js_data_type.html">형타입 파악</a></li>
         <li><a href="./b_03_js_operation.html">연산자</a></li>
+        <li><a href="./b_04_js_nesting_object.html">중첩되는 배열과 객체</a></li>
       </ul>
     </section>
   </div>
