--- a/study_code/c_layout_01/html/b_11_figma_tab.html
+++ b/study_code/c_layout_01/html/b_11_figma_tab.html
@@ -54,15 +54,38 @@
       <div class="content_area">
         <div class="tab_title">
           <ul class="tab_title_list">
-            <li>coffee</li>
-            <li>tea</li>
-            <li>beverage</li>
-            <li>desert</li>
-            <li>theme</li>
+            <li><a href="#" class="action">coffee</a></li>
+            <li><a href="#">tea</a></li>
+            <li><a href="#">beverage</a></li>
+            <li><a href="#">desert</a></li>
+            <li><a href="#">theme</a></li>
           </ul>
         </div>
         <ul class="menu_list">
-          <li></li>
+          <li>list_01</li>
+          <li>list_02</li>
+          <li>list_03</li>
+          <li>list_04</li>
+          <li>list_05</li>
+          <li>list_06</li>
+          <li>list_07</li>
+          <li>list_08</li>
+          <li>list_09</li>
+          <li>list_10</li>
+          <li>list_11</li>
+          <li>list_12</li>
+          <li>list_13</li>
+          <li>list_14</li>
+          <li>list_15</li>
+          <li>list_16</li>
+          <li>list_17</li>
+          <li>list_18</li>
+          <li>list_19</li>
+          <li>list_20</li>
+          <li>list_21</li>
+          <li>list_22</li>
+          <li>list_23</li>
+          <li>list_24</li>
         </ul>
       </div>
     </article>
