--- a/study_code/d_project_01/index.html
+++ b/study_code/d_project_01/index.html
@@ -10,6 +10,7 @@
   <script>
     let url = "./html/main_v1.html";
     // url = ".html/main_v2.html";
+    url = './html/menu.html'
     window.location = url;
   </script>
 </body>
