--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -17,7 +17,9 @@
         <li><a href="./b_02_js_data_type.html">형타입 파악</a></li>
         <li><a href="./b_03_js_operation.html">연산자</a></li>
         <li><a href="./b_04_js_nesting_object.html">중첩되는 배열과 객체</a></li>
-        <li><a href="./b_05_js_condition.html">조건문</a></li>
+        <li><a href="./b_05_js_condition.html">조건문, 클로저, 재귀함수</a></li>
+        <li><a href="./b_06_js_condition2.html">switch</a></li>
+        <li><a href="./b_07_js_condition3.html">if</a></li>
       </ul>
     </section>
   </div>
