--- a/study_code/c_layout_01/html/b_11_figma_tab.html
+++ b/study_code/c_layout_01/html/b_11_figma_tab.html
@@ -50,7 +50,11 @@
     </header>
 
     <article id="contentBox">
-      <div class="title_area"></div>
+      <div class="title_area">
+        <h2 class="container">product menu</h2>
+        <p class="container">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Aenean integer sed amet, turpis consectetur cursus leo. Fringilla mas.</p>
+      </div>
       <div class="content_area">
         <div class="tab_title">
           <ul class="tab_title_list">
@@ -61,31 +65,320 @@
             <li><a href="#">theme</a></li>
           </ul>
         </div>
+
         <ul class="menu_list">
-          <li>list_01</li>
-          <li>list_02</li>
-          <li>list_03</li>
-          <li>list_04</li>
-          <li>list_05</li>
-          <li>list_06</li>
-          <li>list_07</li>
-          <li>list_08</li>
-          <li>list_09</li>
-          <li>list_10</li>
-          <li>list_11</li>
-          <li>list_12</li>
-          <li>list_13</li>
-          <li>list_14</li>
-          <li>list_15</li>
-          <li>list_16</li>
-          <li>list_17</li>
-          <li>list_18</li>
-          <li>list_19</li>
-          <li>list_20</li>
-          <li>list_21</li>
-          <li>list_22</li>
-          <li>list_23</li>
-          <li>list_24</li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">espresso</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">4 season</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu_item_img"></div>
+            <div class="menu_item_title">special</div>
+            <p class="menu_item_detail">2줄정도에 해당하는
+              커피 메뉴에 대한 요약설명
+            </p>
+            <ul class="menu_item_feature">
+              <li class="feature_ice">ice</li>
+              <li class="feature_hot">hot</li>
+              <li class="feature_season">summer</li>
+              <li class="feature_sale">sale</li>
+            </ul>
+          </li>
         </ul>
       </div>
     </article>
