--- a/study_code/d_project_01/html/menu.html
+++ b/study_code/d_project_01/html/menu.html
@@ -45,7 +45,25 @@
         <div class="menu_content">
           <div class="coffee">
             <ul>
-              <li>01</li>
+              <li>
+                <a href="#">
+                  <div class="thumbnail">
+                    <span>이미지에 대한 간략한 설명</span>
+                  </div>
+                  <dl class="menu_thum">
+                    <dt>special</dt>
+                    <dd>2줄정도에 해당하는 <br>
+                    커피 메뉴에 대한 요약 설명
+                    </dd>
+                  </dl>
+                  <div class="tag">
+                    <span class="ice"></span>
+                    <span class="hot"></span>
+                    <span class="summer"></span>
+                    <span class="sale"></span>
+                  </div>
+                </a>
+              </li>
               <li>02</li>
               <li>03</li>
               <li>04</li>
