--- a/study_code/d_project_01/html/main_v1.html
+++ b/study_code/d_project_01/html/main_v1.html
@@ -6,21 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- css 불러오는 순서 : font/icon -> reset.css -> common.css -> design.css -->
-  <!-- font : 구글 폰트 - noto-sans-KR -->
+  <!-- css를 불러오는 순서 : font/icon -> reset -> common.css -> design.css -->
+  <!-- font:구글폰트-noto-sans-kr -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;500;700&display=swap" rel="stylesheet"> 
+
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
   <link rel="stylesheet" href="../css/src/main_v1.css">
 
   <script src="../js/common/modernizr-custom.js"></script>
-
+  
   <title>웹 프로토타입</title>
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="../favicon.png">
 </head>
 <body>
   <!-- layout -->
@@ -39,7 +39,7 @@
       <div class="view_inner">
         <dl>
           <dt>view title</dt>
-          <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure recusandae dolorem corrupti aut facere quidem, eum necessitatibus alias fugiat velit?</dd>
+          <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nostrum nulla at, hic aliquam voluptatem eveniet quis ad aut, numquam beatae nam, qui non mollitia laborum eum. Et, totam quis?</dd>
           <dd><a href="#">바로가기</a></dd>
         </dl>
         <figure class="img_source">
@@ -56,7 +56,7 @@
 
     <aside id="subAdBox">
       <div class="sub_inner">
-        <h2>서브 광고 제목</h2>
+        <h2>서브광고 제목</h2>
       </div>
     </aside><!-- // #subAdBox -->
 
@@ -65,16 +65,16 @@
         <h2>best title</h2>
       </div>
     </section><!-- // #bestBox -->
-    
+
     <section id="galleryBox">
       <div class="gallery_inner">
         <h2>gallery title</h2>
       </div>
     </section><!-- // #galleryBox -->
-    
+
     <aside id="sponsorBox">
-      <h2 class="blind">sponsor</h2>
       <div class="sponsor_inner">
+        <h2 class="blind">sponsor</h2>
       </div>
     </aside><!-- // #sponsorBox -->
 
@@ -83,11 +83,9 @@
         <h2><span class="blind">site information</span></h2>
       </div>
     </footer><!-- // #footBox -->
-
-  </div><!-- // #wrap -->
+  </div>
 
   <!-- script -->
   <script></script>
-  
 </body>
 </html>
