--- a/study_code/d_project_01/html/menu.html
+++ b/study_code/d_project_01/html/menu.html
@@ -48,19 +48,18 @@
               <li>
                 <a href="#">
                   <div class="thumbnail">
-                    <span>이미지에 대한 간략한 설명</span>
+                    <span>이미지에대한 간략 설명</span>
                   </div>
                   <dl class="menu_thum">
                     <dt>special</dt>
-                    <dd>2줄정도에 해당하는 <br>
-                    커피 메뉴에 대한 요약 설명
-                    </dd>
+                    <dd>2줄정도에 해당하는<br />
+                      커피 메뉴에 대한 요약설명</dd>
                   </dl>
                   <div class="tag">
-                    <span class="ice"></span>
-                    <span class="hot"></span>
-                    <span class="summer"></span>
-                    <span class="sale"></span>
+                    <span class="ice">ice</span>
+                    <span class="hot">hot</span>
+                    <span class="summer">summer</span>
+                    <span class="sale">sale</span>
                   </div>
                 </a>
               </li>
