생성자 함수 사용, 요소 생성

--- a/study_code/b_step_03/html/b_08_js_repeat1.html
+++ b/study_code/b_step_03/html/b_08_js_repeat1.html
@@ -34,6 +34,7 @@
                     -[].forEach(funtion(data,index){})
       </li>
     </ul>
+    <ul class="test"></ul>
   </div>
 
   <!-- script -->
