--- a/study_code/b_step_03/html/b_08_js_repeat1.html
+++ b/study_code/b_step_03/html/b_08_js_repeat1.html
@@ -39,5 +39,6 @@
 
   <!-- script -->
   <script src="../js/src/b_08_js_repeat1.js"></script>
+  <script src="../js/src/b_08_js_repeat2.js"></script>
 </body>
 </html>
