--- a/study_code/d_project_01_v2/html/main.html
+++ b/study_code/d_project_01_v2/html/main.html
@@ -17,7 +17,24 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <header id="headBox">#headBox</header>
+    <header id="headBox">
+      <div class="container head_area clearfix">
+        <h1><a href="./main.html">logo</a></h1>
+        
+        <nav class="navi_inner">
+          <h2 class="blind">navigation</h2>
+          <div class="nav_btn">
+            <button type="button">
+              <span class="blind">navi</span>
+            </button>
+          </div>
+          <div class="navi_wrap">
+            navigation 영역
+          </div>
+        </nav>
+      </div>
+    </header><!-- #headBox -->
+
     <section id="slideBox">#slideBox</section>
     <article id="newBox">#newBox</article>
     <aside id="commercialBox">#commercialBox</aside>
