--- a/study_code/b_step_03/html/a_content.html
+++ b/study_code/b_step_03/html/a_content.html
@@ -25,6 +25,7 @@
         <li><a href="./b_13_js_constructor_function.html">생성자 함수</a></li>
         <li><a href="./b_14_js_json_1.html">json 문서처리1</a></li>
         <li><a href="./b_15_js_import_data.html">외부 문서 불러오기</a></li>
+        <li><a href="./b_16_js_remind_02.html">javascript - es5 - 기초 재정리 2</a></li>
       </ul>
     </section>
     <section class="part">
@@ -37,6 +38,7 @@
       <ul>
         <li><a href="./c_01_dom_sample_01.html">dom 구축 샘플링</a></li>
         <li><a href="./c_02_dom_make_nav_01.html">header영역 구축</a></li>
+        <li><a href="./c_03_dom_check_restore_01.html">이전내용 복슴 겸 정리</a></li>
       </ul>
     </section>
   </div>
