fadein fadeout, css 오류 잡아야함

--- a/study_code/b_step_03/html/c_08_dom_fade_btn.html
+++ b/study_code/b_step_03/html/c_08_dom_fade_btn.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- c_08_dom_fade_btn.html -->
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
@@ -19,37 +18,43 @@
     <article id="newBox">
       <h2>news</h2>
       <div class="new_area">
-        <div class="card">
+        <div class="card interval_btn">
           <a href="#">
             <div class="img_zone"></div>
             <dl>
               <dt>title_01</dt>
-              <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</dd>
+              <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, beatae.</dd>
             </dl>
           </a>
         </div><!-- .card -->
 
-        <div class="card">
+        <div class="card timeout_btn">
           <a href="#">
             <div class="img_zone"></div>
             <dl>
-              <dt>title_01</dt>
-              <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</dd>
-            </dl>
-          </a>
-        </div><!-- .card -->
-
-        <div class="card">
-          <a href="#">
-            <div class="img_zone"></div>
-            <dl>
-              <dt>title_01</dt>
-              <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</dd>
+              <dt>title_02</dt>
+              <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, beatae.</dd>
             </dl>
           </a>
         </div><!-- .card -->
         
-      </div> <!-- .new_area -->
+        <div class="card css_btn">
+          <a href="#">
+            <div class="img_zone"></div>
+            <dl>
+              <dt>title_03</dt>
+              <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, beatae.</dd>
+            </dl>
+          </a>
+        </div><!-- .card -->
+
+      </div><!-- .new_area -->
+
+      <div class="new_area_modal">
+        <h4>new modal</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, accusantium!</p>
+        <div class="close_btn"><button type="button">닫기</button></div>
+      </div>
     </article>
   </div>
 
