2시 30분~4시 수업시간 진도

--- a/study_code/b_step_03/html/c_10_dom_tab_menu2.html
+++ b/study_code/b_step_03/html/c_10_dom_tab_menu2.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
   <link rel="stylesheet" href="../css/src/c_10_dom_tab_menu2.css">
-  <script src="../js/common/modernizr-custom.js"></script>
   <title>탭메뉴 및 모달 윈도우 만들기</title>
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="../favicon.png">
@@ -42,7 +41,7 @@
 
         <div class="content_inner">
           <div class="year_part">
-            <h3>이벤트 해 </h3>
+            <h3>2021년도 이벤트</h3>
             <ul class="event_particle">
               <li>event_01(제목, 내용, 기간, 진행여부, 배경이미지, 불러올 링크 data)</li>
               <li>event_02</li>
@@ -52,7 +51,7 @@
             </ul>
           </div>
           <div class="year_part">
-            <h3>이벤트 해 </h3>
+            <h3>2020년도 이벤트</h3>
             <ul class="event_particle">
               <li>event_01</li>
               <li>event_02</li>
@@ -62,7 +61,7 @@
             </ul>
           </div>
           <div class="year_part">
-            <h3>이벤트 해 </h3>
+            <h3>2019년도 이벤트</h3>
             <ul class="event_particle">
               <li>event_01</li>
               <li>event_02</li>
@@ -72,7 +71,7 @@
             </ul>
           </div>
           <div class="year_part">
-            <h3>이벤트 해 </h3>
+            <h3>2018년도 이벤트</h3>
             <ul class="event_particle">
               <li>event_01</li>
               <li>event_02</li>
