--- a/study_code/b_step_03/html/c_10_dom_tab_menu2.html
+++ b/study_code/b_step_03/html/c_10_dom_tab_menu2.html
@@ -42,15 +42,15 @@
         <div class="content_inner">
           <div class="year_part">
             <h3>2021년도 이벤트</h3>
-            <ul class="event_particle">
+            <!-- <ul class="event_particle">
               <li>event_01(제목, 내용, 기간, 진행여부, 배경이미지, 불러올 링크 data)</li>
               <li>
                 <a href="../event/y21042_data.json" data-id="event_21042">
                   <h4 class="event_title">summer flaver</h4>
-                  <p class="evetn_narration">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, beatae.</p>
+                  <p class="event_narration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, eaque?</p>
                   <dl class="date">
                     <dt class="blind">기간</dt>
-                    <dd>2122. 01. 05 - 2022. 02. 15</dd>
+                    <dd>2022. 01. 05 - 2022. 02. 15</dd>
                   </dl>
                   <dl class="event_check success">
                     <dt>이벤트 진행 상태</dt>
@@ -81,7 +81,7 @@
               <li>event_03</li>
               <li>event_04</li>
               <li>event_05</li>
-            </ul>
+            </ul> -->
           </div>
           <div class="year_part">
             <h3>2018년도 이벤트</h3>
