[add] event:scss - 모달창 내용 틀잡기

--- a/study_code/b_step_03/html/c_10_dom_tab_menu2.html
+++ b/study_code/b_step_03/html/c_10_dom_tab_menu2.html
@@ -40,9 +40,10 @@
         </div>
 
         <div class="content_inner">
-          <div class="year_part">
-            <h3>2021년도 이벤트</h3>
-            <!-- <ul class="event_particle">
+        <!-- 
+        <div class="year_part">
+          <h3>2021년도 이벤트</h3>
+            <ul class="event_particle">
               <li>event_01(제목, 내용, 기간, 진행여부, 배경이미지, 불러올 링크 data)</li>
               <li>
                 <a href="../event/y21042_data.json" data-id="event_21042">
@@ -61,8 +62,9 @@
               <li>event_03</li>
               <li>event_04</li>
               <li>event_05</li>
-            </ul>-->
+            </ul>
           </div>
+          -->
           <div class="year_part">
             <h3>2020년도 이벤트</h3>
             <ul class="event_particle">
@@ -81,7 +83,7 @@
               <li>event_03</li>
               <li>event_04</li>
               <li>event_05</li>
-            </ul> 
+            </ul>
           </div>
           <div class="year_part">
             <h3>2018년도 이벤트</h3>
@@ -93,7 +95,20 @@
               <li>event_05</li>
             </ul>
           </div>
+        </div><!-- .content_inner -->
+        
+        <!-- modal -->
+        <div class="event_modal">
+          <div class="modal_part">
+            <h4>modal title</h4>
+            <div class="modal_particle">
+              <div class="inner_sample">sample</div>
+            </div>
+            <div class="modal_close"><button type="button">닫기</button></div>
+          </div>
+          <div class="modal_bg"></div>
         </div>
+
       </div>
 
     </article>
