[add] javascript - 모달기능을 위한 버튼클릭 / 이전내용 다시 작업

--- a/study_code/b_step_03/html/c_10_dom_tab_menu2.html
+++ b/study_code/b_step_03/html/c_10_dom_tab_menu2.html
@@ -115,6 +115,17 @@
     <!-- ================================ -->
     <footer id="footBox">
       <h2>site information</h2>
+      <ul class="footer_inner">
+        <p>adfdsf</p>
+        <div>dfdf</div>
+        <li>foot_list_01</li>
+        <!-- comment -->
+        <li>foot_list_02</li>
+        <!-- li 설명 -->
+        <li>foot_list_03</li>
+        <li>foot_list_04</li>
+        <li>foot_list_05</li>
+      </ul>
     </footer>
   </div>
 
@@ -139,6 +150,6 @@
   <!-- modal-window -->
   <!-- <script src="../js/src/c_10_dom_modal.js"></script> -->
   <script src="../js/src/c_10_dom_tab_menu2-3.js"></script>
-  
+
 </body>
 </html>
